# basis_set_exchange

./: pyproject.toml
rust/: Cargo.toml  pyproject.toml
rust/python/bse/: __init__.py
rust/python/tests/: test_all.py
rust/src/: data  lib.rs
