[package]
name = "bse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bse"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dependencies.pyo3]
version = "0.22.0"
features = ["abi3-py38"]
